# SuperMD

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile  README.md  README.sn-cloud.md  com.jamesdurkee.sn2md-watch.plist  com.sn2md.watch.plist.in  config.gpt.toml  debug_format_error.py  docker-compose.sn-cloud.yml  docker-compose.webdav.yml  docker-compose.yml  entrypoint.sh  example.env  jobs.example.yaml  jobs.yaml  patch.sh  personal.toml  pyproject.toml  requirements.txt  sn-cloud.default.env  sn2md-batches.sh  sn2md-images-subdir.patch  sn2md-metadata-dotmeta.patch  sn2md-prompt-context.patch  sn2md-watch.sh  sn2md-year-month-day.patch  supernotelib-ratta-fallback.patch  theme-preview.html  watcherctl.sh
.agent/workflows/: dev-environment.md
config/: docker-jobs.yaml  jobs.docker.example.yaml  jobs.example.yaml  settings.toml  supermd.example.yaml
docker/stack/: .env.example  README.md  docker-compose.yml  init-secrets.sh  setup.sh  supermd-entrypoint.sh  supermd.stack.yaml
docs/: commands.md  configuration.md  docker-stack.md  getting-started.md  running-docker.md  templates.md
scripts/: debug_note.py
src/sn2md/: ai_utils.py  batches.py  cli.py  console.py  context.py  converter.py  date_utils.py  importer.py  job_config.py  metadata.py  metadata_db.py  report.py  service.py  types.py  utils.py  watcher.py
src/sn2md_app.egg-info/: PKG-INFO  SOURCES.txt  (+3 more)
test_watch_dir/: test1.txt
tests/: conftest.py  jobs.test.gpt.yaml  jobs.test.yaml  test.gpt.toml  test.toml  test_batches.py  test_cli.py  test_config.py  test_core.py  test_extractors.py  test_gui.py  test_metadata_db.py  test_metadata_feedback.py  test_service.py  test_watcher.py
(+37 files in other folders)
